# termihui

./: .gitignore  CMakeLists.txt  FEATURES.md  LICENSE  README.md
.cursor/rules/: cpp-code-style.mdc  server-service.mdc  swift-extensions.mdc  swift-test-conventions.mdc  xcode-build.mdc
.github/workflows/: ci.yml
client-core/: CMakeLists.txt
client-core/include/termihui/: ansi_parser.h  client_core.h  client_core_c.h  client_storage.h  thread_safe_queue.h  thread_safe_string.h  websocket_client_controller.h  websocket_client_controller_impl.h
client-core/include/termihui/clipboard/: clipboard_manager.h  clipboard_manager_ios.h  clipboard_manager_linux.h  clipboard_manager_macos.h
client-core/src/: ansi_parser.cpp  client_core.cpp  client_storage.cpp  websocket_client_controller.cpp
client-core/src/clipboard/: clipboard_manager_ios.mm  clipboard_manager_linux.cpp  clipboard_manager_macos.mm
client-core/tests/: ClientCoreControllerTestable.cpp  ClientCoreControllerTestable.h  MockWebSocketClientController.h  test_client_core_controller.cpp  test_client_storage.cpp
docs/: protocol.md  terminal-features-comparison.md
gtk-client/: CMakeLists.txt
gtk-client/include/: AppState.h  Application.h  ClientCoreWrapper.h  CommandBlockWidget.h  ConnectingView.h  MainWindow.h  PangoUtils.h  TerminalView.h  WelcomeView.h
gtk-client/resources/: style.css
gtk-client/src/: Application.cpp  ClientCoreWrapper.cpp  CommandBlockWidget.cpp  ConnectingView.cpp  MainWindow.cpp  PangoUtils.cpp  TerminalView.cpp  WelcomeView.cpp  main.cpp
ios-client/termihui-client-ios.xcodeproj/: project.pbxproj
ios-client/termihui-clientTests/: termihui_clientTests.swift
ios-client/termihui-clientUITests/: termihui_clientUITests.swift  termihui_clientUITestsLaunchTests.swift
macos-client/: .gitignore  .gitkeep  TermiHUI-Bridging-Header.h
macos-client/Shared/: AppSettings.swift  AppState.swift  ClientCoreWrapper.swift  LLMProvidersViewControllerDelegate.swift  SessionInfo.swift
macos-client/termihui-client/: ANSIParser.swift  AppDelegate.swift  AppState.swift  Character+Printable.swift  ChatInputTextField.swift  ChatMessage.swift  ChatMessageCellView.swift  ChatSidebarContainerView.swift  ChatSidebarViewController+TableView.swift  ChatSidebarViewController.swift  ChatSidebarViewControllerDelegate.swift  ClientCoreBridge.cpp  ClientCoreWrapper.swift  CommandBlockContainerView.swift  CommandBlockItem.swift  CommandBlockItemDelegate.swift  ConnectingViewController.swift  LLMProvider.swift  LLMProviderEditViewController.swift  LLMProvidersViewController+TableView.swift  LLMProvidersViewController.swift  MessageDecoder.swift  RootViewController.swift  SessionCellView.swift  SessionInfo.swift  SessionListViewController.swift  StyledSegment.swift  TabHandlingTextField.swift  TerminalMessage.swift  TerminalViewController+Chat.swift  TerminalViewController+CollectionView.swift  TerminalViewController+CommandBlocks.swift  TerminalViewController+Completion.swift  TerminalViewController+ContextMenu.swift  TerminalViewController+LLMProviders.swift  TerminalViewController+Selection.swift  TerminalViewController+Sessions.swift  TerminalViewController.swift  TerminalViewControllerDelegate.swift  ViewController.swift  (+2 more)
macos-client/termihui-client-ios/: AppDelegate.swift  ChatMessageCell.swift  ChatViewController+TableView.swift  ChatViewController.swift  CommandBlockCell.swift  CommandBlockModel.swift  Info.plist  LLMProviderEditViewController.swift  LLMProvidersViewController.swift  SceneDelegate+Chat.swift  SceneDelegate+LLMProviders.swift  SceneDelegate+ServerList.swift  SceneDelegate+SessionList.swift  SceneDelegate+Terminal.swift  SceneDelegate.swift  ServerListViewController+TableView.swift  ServerListViewController.swift  SessionListViewController+TableView.swift  SessionListViewController.swift  TerminalModels.swift  TerminalViewController.swift  ViewController.swift
macos-client/termihui-client-iosTests/: ChatViewControllerTests.swift  MockChatViewControllerDelegate.swift  TestableChatViewController.swift  termihui_client_iosTests.swift
macos-client/termihui-client-iosUITests/: termihui_client_iosUITests.swift  termihui_client_iosUITestsLaunchTests.swift
macos-client/termihui-client.xcodeproj/: project.pbxproj
macos-client/termihui-clientTests/: MockChatSidebarViewController.swift  MockSessionListViewController.swift  TerminalViewControllerTests.swift  (+1 more)
server/: CMakeLists.txt  README.md  install.sh
server/src/: AIAgentController.cpp  AIAgentController.h  AIAgentControllerImpl.cpp  AIAgentControllerImpl.h  AnsiProcessor.cpp  AnsiProcessor.h  CompletionManager.cpp  CompletionManager.h  FileSystemManager.cpp  FileSystemManager.h  JsonHelper.cpp  JsonHelper.h  OutputParser.cpp  OutputParser.h  ServerStorage.cpp  ServerStorage.h  ServerStorageImpl.cpp  ServerStorageImpl.h  ServerStorageModels.h  SessionManager.cpp  SessionManager.h  SessionStorage.cpp  SessionStorage.h  SessionStorageModels.h  SessionStorageSchema.h  TermihuiServer.cpp  TermihuiServer.h  TermihuiServerController.cpp  TermihuiServerController.h  TerminalSession.cpp  TerminalSession.h  TerminalSessionController.cpp  TerminalSessionController.h  VirtualScreen.cpp  VirtualScreen.h  WebSocketServer.cpp  WebSocketServer.h  WebSocketServerImpl.h  main.cpp
server/tests/: AIAgentControllerMock.h  ServerStorageMock.h  TermihuiServerControllerTestable.h  TerminalSessionControllerMock.h  WebSocketServerMock.h  test_ansi_processor.cpp  test_completion_manager.cpp  test_interactive_session.cpp  test_main.cpp  test_output_parser.cpp  test_termihui_server_controller.cpp  test_terminal_session.cpp  test_virtual_screen.cpp
shared/: CMakeLists.txt
shared/include/termihui/: grid2d.h  text_style.h  thread_safe_queue.h
shared/include/termihui/filesystem/: file_system_manager.h
shared/include/termihui/protocol/: client_messages.h  json_serialization.h  protocol.h  server_messages.h
shared/src/: json_serialization.cpp
shared/src/filesystem/: file_system_manager_apple.mm  file_system_manager_desktop.cpp
shared/tests/: test_grid2d.cpp
(+5 files in other folders)
